Update: align benefit card bullet lists and ensure phone number bar is present in header

--- a/index.html
+++ b/index.html
@@ -152,14 +152,13 @@
 <body>
     <!-- Header -->
     <header>
+        <div id="phone-static" style="position:absolute;top:18px;right:5%;font-size:1.3rem;font-weight:700;z-index:999;background:#28a745;color:white;padding:8px 18px;border-radius:8px;box-shadow:0 2px 8px rgba(40,167,69,0.3);">
+            Call Now: <a href="tel:503-764-5097" style="color:white;text-decoration:underline;font-weight:700;">503-764-5097</a>
+        </div>
         <div class="header-container">
             <a href="/" class="brand">
                 <img src="assets/logo.png" alt="Veteran Legacy Life Logo">
                 <span>Veteran Legacy Life</span>
-            </a>
-            <a href="tel:503-764-5097" class="phone">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="currentColor"><path d="M6.62 10.79c1.44 2.83 3.76 5.14 6.59 6.59l2.2-2.2c.27-.27.67-.36 1.02-.24 1.12.37 2.33.57 3.57.57.55 0 1 .45 1 1V20c0 .55-.45 1-1 1-9.39 0-17-7.61-17-17 0-.55.45-1 1-1h3.5c.55 0 1 .45 1 1 0 1.25.2 2.45.57 3.57.11.35.03.74-.25 1.02l-2.2 2.2z"></path></svg>
-                <span>503-764-5097</span>
             </a>
         </div>
     </header>
@@ -206,11 +205,13 @@
             <h2 class="section-title">2025 Life Insurance Plans for Veterans, Active Service and Family Members</h2>
             <div class="benefits-cards-grid">
                 <div class="benefit-card-modern">
-                    <div class="benefit-icon-modern">
-                        <i class="fas fa-shield-heart"></i>
+                    <div class="benefit-card-modern-header">
+                        <div class="benefit-icon-modern">
+                            <i class="fas fa-shield-heart"></i>
+                        </div>
+                        <h3>Whole Life Insurance</h3>
+                        <p>Lifetime protection with guaranteed cash value and fixed premiums for your loved ones' security.</p>
                     </div>
-                    <h3>Whole Life Insurance</h3>
-                    <p>Lifetime protection with guaranteed cash value and fixed premiums for your loved ones' security.</p>
                     <ul class="benefit-list">
                         <li><i class="fas fa-check-circle"></i> Guaranteed death benefit</li>
                         <li><i class="fas fa-check-circle"></i> Cash value growth</li>
@@ -219,11 +220,13 @@
                     </ul>
                 </div>
                 <div class="benefit-card-modern">
-                    <div class="benefit-icon-modern">
-                        <i class="fas fa-clock"></i>
+                    <div class="benefit-card-modern-header">
+                        <div class="benefit-icon-modern">
+                            <i class="fas fa-clock"></i>
+                        </div>
+                        <h3>Term Life Insurance</h3>
+                        <p>Affordable coverage for a set period, with options to convert to permanent protection.</p>
                     </div>
-                    <h3>Term Life Insurance</h3>
-                    <p>Affordable coverage for a set period, with options to convert to permanent protection.</p>
                     <ul class="benefit-list">
                         <li><i class="fas fa-check-circle"></i> Lower initial premiums</li>
                         <li><i class="fas fa-check-circle"></i> Flexible term lengths</li>
@@ -232,11 +235,13 @@
                     </ul>
                 </div>
                 <div class="benefit-card-modern">
-                    <div class="benefit-icon-modern">
-                        <i class="fas fa-chart-line"></i>
+                    <div class="benefit-card-modern-header">
+                        <div class="benefit-icon-modern">
+                            <i class="fas fa-chart-line"></i>
+                        </div>
+                        <h3>IUL Life Insurance</h3>
+                        <p>Indexed Universal Life with market-linked growth and advanced living benefits.</p>
                     </div>
-                    <h3>IUL Life Insurance</h3>
-                    <p>Indexed Universal Life with market-linked growth and advanced living benefits.</p>
                     <ul class="benefit-list">
                         <li><i class="fas fa-check-circle"></i> Market-linked growth</li>
                         <li><i class="fas fa-check-circle"></i> Downside protection</li>
