--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                 <span>Veteran Legacy Life</span>
             </a>
             <div class="header-phone">
-                <a href="tel:5037645097" class="header-phone-number">(503) 764-5097</a>
+                <a href="tel:5037645097" class="header-phone-number">503-764-5097</a>
             </div>
         </div>
     </header>
