Add 7-second loading modal after See Results button - covers entire screen with spinner and correct message

--- a/index.html
+++ b/index.html
@@ -1109,7 +1109,7 @@
     <div id="medical-processing-modal" class="modal-overlay" style="display:none;z-index:9999;">
         <div class="processing-modal-content">
             <div class="processing-spinner"></div>
-            <h2>You answers are being processed. Please Wait.</h2>
+            <h2>Your answers are being processed. Please wait.</h2>
         </div>
     </div>
     <!-- Congratulations Modal for Medical Funnel -->
