--- a/test-cors.html
+++ b/test-cors.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>CORS Test</title>
+    <script src="config.js"></script>
 </head>
 <body>
     <h1>CORS Test for Google Apps Script</h1>
@@ -14,7 +15,7 @@
             resultDiv.innerHTML = 'Testing CORS...';
             
             try {
-                const response = await fetch('https://script.google.com/macros/s/AKfycbzSYFrwwTMIITMCFPmTRaQEr2DazQjKamxPChDZeJjKh96XIdZ8O-w0x5YYmpJvlU9y/exec', {
+                const response = await fetch(getApiUrl(), {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
