--- a/test-form.html
+++ b/test-form.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Test Form - Veteran Life Insurance</title>
+    <script src="config.js"></script>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -105,7 +106,7 @@
 
     <script>
 
-const GOOGLE_APPS_SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbzSYFrwwTMIITMCFPmTRaQEr2DazQjKamxPChDZeJjKh96XIdZ8O-w0x5YYmpJvlU9y/exec';
+const GOOGLE_APPS_SCRIPT_URL = getApiUrl();
         
         document.getElementById('testForm').addEventListener('submit', async function(e) {
             e.preventDefault();
