FIX: Standardize modal CSS classes for consistent styling - Change load-screen-content to funnel-modal-content - Change processing-modal-content to funnel-modal-content - Change congrats-modal-content to funnel-modal-content - Ensure all modals use modal-overlay + funnel-modal-content structure - Fix styling inconsistency between loading screen and other modals

--- a/index.html
+++ b/index.html
@@ -826,7 +826,7 @@
         
         <!-- Funnel Load Screen Modal -->
         <div id="funnel-load-screen-modal" class="modal-overlay" style="z-index:9999;">
-            <div class="load-screen-content">
+            <div class="funnel-modal-content">
                 <div class="load-screen-logo">
                     <img src="assets/logo.png" alt="Veteran Legacy Life Logo">
                 </div>
@@ -1090,7 +1090,7 @@
 
     <!-- Processing Modal -->
     <div id="processing-modal" class="modal-overlay" style="display:none;z-index:9999;">
-        <div class="processing-modal-content">
+        <div class="funnel-modal-content">
             <div class="processing-spinner"></div>
             <h2>Processing your information</h2>
             <p>Please wait while we check your eligibility...</p>
@@ -1099,7 +1099,7 @@
 
     <!-- Congratulations Modal -->
     <div id="congrats-modal" class="modal-overlay" style="display:none;z-index:9999;">
-        <div class="congrats-modal-content">
+        <div class="funnel-modal-content">
             <div class="congrats-checkmark">
                 <svg width="80" height="80" viewBox="0 0 80 80" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <circle cx="40" cy="40" r="38" stroke="#22c55e" stroke-width="4" fill="#e9fbe9"/>
@@ -1150,14 +1150,14 @@
 
     <!-- Processing Modal for Medical Funnel -->
     <div id="medical-processing-modal" class="modal-overlay" style="display:none;z-index:9999;">
-        <div class="processing-modal-content">
+        <div class="funnel-modal-content">
             <div class="processing-spinner"></div>
             <h2>You answers are being processed. Please Wait.</h2>
         </div>
     </div>
     <!-- Congratulations Modal for Medical Funnel -->
     <div id="medical-congrats-modal" class="modal-overlay" style="display:none;z-index:9999;">
-        <div class="congrats-modal-content">
+        <div class="funnel-modal-content">
             <button class="modal-close-btn" onclick="hideMedicalCongratsModal()" style="position: absolute; top: 15px; right: 15px; background: none; border: none; font-size: 24px; color: #666; cursor: pointer;">×</button>
             <div class="congrats-checkmark">
                 <svg width="80" height="80" viewBox="0 0 80 80" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -1173,7 +1173,7 @@
 
     <!-- Application Submission Congratulations Modal -->
     <div id="application-congrats-modal" class="modal-overlay" style="display:none;z-index:9999;">
-        <div class="congrats-modal-content" style="max-width: 600px; padding: 3rem; text-align: center; background: white; border-radius: 20px; box-shadow: 0 20px 60px rgba(0,0,0,0.1);">
+        <div class="funnel-modal-content" style="max-width: 600px; padding: 3rem; text-align: center; background: white; border-radius: 20px; box-shadow: 0 20px 60px rgba(0,0,0,0.1);">
             <button class="modal-close-btn" onclick="hideApplicationCongratsModal()" style="position: absolute; top: 15px; right: 15px; background: none; border: none; font-size: 24px; color: #666; cursor: pointer;">×</button>
             
             <!-- Logo -->
@@ -1755,7 +1755,7 @@
 
     <!-- Load Screen Modal -->
     <div id="load-screen-modal" class="modal-overlay" style="display:none;z-index:9999;">
-        <div class="load-screen-content">
+        <div class="funnel-modal-content">
             <div class="load-screen-logo">
                 <img src="assets/logo.png" alt="Veteran Legacy Life Logo">
             </div>
