Fix Google Apps Script issues: status consistency, error handling, email reliability, and data validation

--- a/index.html
+++ b/index.html
@@ -1822,7 +1822,7 @@
     <!-- Application Final Modal (Page 2) -->
     
     <!-- React Funnel Component -->
-    <script src="veteran-funnel.iife.js"></script>
+    <script src="veteran-funnel.iife.js?v=65"></script>
     <script>
         // Initialize React funnel when page loads
         document.addEventListener('DOMContentLoaded', function() {
