🔧 Fix Google Apps Script URL: Unhardcode URLs and use global variables for better deployment management

--- a/index.html
+++ b/index.html
@@ -381,6 +381,12 @@
     <!-- Canonical URL -->
     <link rel="canonical" href="https://veteranlegacylife.com">
     
+    <!-- Global Configuration -->
+    <script>
+        // Global configuration for Google Apps Script URL
+        window.GOOGLE_APPS_SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbwnU-KpI1d0yuFeB1dIqBbpwlvpkakdXu1rN8IiRKFalHwiESYF7gs14w58Dkk_ObHWwg/exec';
+    </script>
+    
     <!-- Structured Data (JSON-LD) -->
     <script type="application/ld+json">
     {
