feat: Complete beneficiary processing fix and deployment URL update
- Updated Google Apps Script deployment URL to new deployment
- Implemented multiple beneficiary processing with concatenation
- Added helper function processBeneficiaryData() for consistent handling
- Updated test data to include multiple beneficiaries
- Enhanced email templates for better beneficiary display
- Added comprehensive documentation and test scripts
- Updated all configuration files with new deployment URL
- Rebuilt production assets with latest changes

Files updated:
- Google Scripts: Main.gs, Templates.gs, env.gs
- Frontend: globalConfig.ts, funnelStore.ts, ApplicationStep1.tsx
- Configuration: funnel-config.js, js/config.js, js/modules/api.js
- Documentation: GOOGLE_SCRIPT_FIXES.md, DEPLOYMENT_URL_UPDATE.md
- Tests: test-multiple-beneficiaries.js, test-beneficiary-fix.js

This is the most up-to-date version with all beneficiary fixes and new deployment URL.

--- a/funnel-app/index.html
+++ b/funnel-app/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Exclusive 2025 life insurance benefits for veterans, active service members, and their families. Get whole life, term life, and IUL coverage with living benefits.">
     
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="../assets/favicon.png">
+    <link rel="icon" type="image/png" href="/assets/favicon.png">
     
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
@@ -772,7 +772,7 @@
                 <h1>You May Qualify for New Life Insurance Benefits in 2025</h1>
                 <p>As a resident of your state, you are entitled to check your eligibility for exclusive life insurance benefits designed specifically for our nation's heroes.</p>
                 <div class="hero-buttons">
-                    <button class="cta-button qualify-button" onclick="window.VeteranFunnel.open()">See If I Qualify <span>→</span></button>
+                    <button class="cta-button qualify-button" onclick="if(window.VeteranFunnel) window.VeteranFunnel.open(); else console.log('VeteranFunnel not loaded yet');">See If I Qualify <span>→</span></button>
                 </div>
                 <div class="security-note">
                     <i class="fas fa-shield-alt"></i>
