Fix logo path - Update all logo references to use correct assets/logo.png path

--- a/funnel-app/index.html
+++ b/funnel-app/index.html
@@ -764,7 +764,7 @@
     <header>
         <div class="header-container">
             <a href="/" class="brand">
-                <img src="/logo.png" alt="Veteran Legacy Life Logo">
+                <img src="/assets/logo.png" alt="Veteran Legacy Life Logo">
                 <span>Veteran Legacy Life</span>
             </a>
             <nav class="header-nav">
@@ -890,7 +890,7 @@
                             <th class="private-column">
                                 <div class="column-header">
                                     <div class="private-logo">
-                                        <img src="/logo.png" alt="Veteran Legacy Life Logo">
+                                        <img src="/assets/logo.png" alt="Veteran Legacy Life Logo">
                                     </div>
                                     <h3>Private Life Insurance for Veterans</h3>
                                 </div>
