Update contact form consent checkboxes to acknowledge Quantum Industries as contact party

--- a/index.html
+++ b/index.html
@@ -733,11 +733,11 @@
                 <div class="consent-checkboxes">
                     <label class="consent-label">
                         <input type="checkbox" name="transactionalConsent" required>
-                        <span>By checking this box, I consent to receive transactional messages related to my account, orders, or services I have requested. These messages may include appointment reminders, order confirmations, and account notifications among others. Message frequency may vary. Message & Data rates may apply. Reply HELP for help or STOP to opt-out.</span>
+                        <span>By checking this box, I acknowledge and consent to be contacted by Quantum Industries regarding transactional messages related to my account, orders, or services I have requested. These messages may include appointment reminders, order confirmations, and account notifications among others. Message frequency may vary. Message & Data rates may apply. Reply HELP for help or STOP to opt-out.</span>
                     </label>
                     <label class="consent-label">
                         <input type="checkbox" name="marketingConsent">
-                        <span>By checking this box, I consent to receive marketing and promotional messages, including special offers, discounts, new product updates among others. Message frequency may vary. Message & Data rates may apply. Reply HELP for help or STOP to opt-out.</span>
+                        <span>By checking this box, I acknowledge and consent to be contacted by Quantum Industries for marketing and promotional messages, including special offers, discounts, new product updates among others. Message frequency may vary. Message & Data rates may apply. Reply HELP for help or STOP to opt-out.</span>
                     </label>
                 </div>
                 <div style="display:flex;justify-content:center;align-items:center;margin-top:2rem;">
